muestra codigo QR se genera cada que entra al detalle, en el monitor se puede hacer la lectura del codigo QR aparece en un messageToast pendiente pintarlo en el input de busqueda, busqueda por codigo_inventario

--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -53,7 +53,7 @@
                                 <Button type="Emphasized" text="{i18n>button.action.imprimir}" press=".onPressImprimir" />
                             </HBox>
                             <HBox justifyContent="Center">
-                                <Image src="../assets/150.png" width="{/imageWidth}" />
+                                <Image id="codeQRDetail"  width="{/imageWidth}" />
                             </HBox>
                         </VBox>
                     </content>
